# Tracker

./: .gitignore  .gitmodules  CMakeLists.txt  config.json  database.db
libs/sqlite3/: CMakeLists.txt  sqlite3.cbp
sql/: create_db.sql  select_events.sql
src/: main.cpp
src/database/: Connection.cpp  Connection.h  Statement.cpp  Statement.h
src/filesystem/: Event.h  Listener.h  Watcher.h
src/filesystem/inotify/: DirectoryWatcher.cpp  DirectoryWatcher.h  DirectoryWatchers.cpp  DirectoryWatchers.h  Inotify.cpp  Inotify.h  InotifyWatcher.cpp  InotifyWatcher.h
src/logger/: Logger.cpp  Logger.h
src/process/: Pid.cpp  Pid.h
src/worker/: EventType.h  Job.h  MonitorFiles.cpp  MonitorFiles.h  MonitorProcesses.cpp  MonitorProcesses.h  Worker.cpp  Worker.h
